25-custom-eks/app/05-frontend-gateway/01-gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: roboshop-aws-alb
spec:
  controllerName: gateway.k8s.aws/alb      # defines which load balancer to use
