25-custom-eks/app/05-frontend-gateway/03-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: roboshop-gateway
  namespace: roboshop
spec:
  gatewayClassName: roboshop-aws-alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: roboshop-aws-alb-config
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        options:
          gateway.k8s.aws/certificate-arn: "arn:aws:acm:us-east-1:204427113986:certificate/9146679a-cbdc-49f1-8bb8-9a4b7e0db8a3"
      allowedRoutes:
        namespaces:
          from: Same
