25-custom-eks/app/05-frontend-gateway/04-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: roboshop
spec:
  parentRefs:
    - name: roboshop-gateway
      sectionName: https
  hostnames:
    - "roboshop-dev.neeli.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
